# multi-video-ui

./: .gitmodules  CMakeLists.txt  README.md  face-ui_en_US.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CaptureThread.cpp  CaptureThread.h  ImageProcessingSettingsDialog.cpp  ProcessingThread.cpp  ProcessingThread.h
